# NSJ-ERP

./: commit-script.ps1
NSJ-ERP-main/nsj-backend/: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.railway  Dockerfile.simple  Makefile  QUICK_START.md  README.md  START_HERE.md  VISUAL_GUIDE.md  analyze_template.py  check_color.py  check_color_v2.py  check_data_file.py  color_output.txt  create_clean_template.py  create_clean_template_no_redactions.py  create_truly_clean_template.py  db_backup.json  db_backup_clean.json  db_export.json  debug_pdf.py  demo_tally_workflow.py  design.md  diagnose_issues.py  extract_all_coordinates.py  extract_exact_coordinates.py  extract_precise_coordinates.py  extract_template_coordinates.py  extract_text_colors.py  find_lines.py  fix_account_company_ids.py  get_table_columns.py  gunicorn_config.py  manage.py  package-lock.json  page2_output.txt  pyproject.toml  (+22 more)
NSJ-ERP-main/nsj-backend/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
NSJ-ERP-main/nsj-backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
NSJ-ERP-main/nsj-backend/docs/: 2026_BANK_HOLIDAYS_COMPLETE.md  ARCHITECTURE_DIAGRAM.md  ARCHIVED_QUERIES_PAGES.md  ARCHIVE_WORKFLOW_VISUAL.md  AUTO_ARCHIVE_IMPLEMENTATION.md  BEFORE_AFTER_COMPARISON.md  BUSINESS_DAYS_IMPLEMENTATION.md  BUSINESS_DAYS_QUICK_REFERENCE.md  BUSINESS_DAYS_VISUAL_GUIDE.md  CI_FIXES_COMPLETE.md  COMPLETION_REPORT.md  COVERAGE_FIXES_COMPLETE.md  DJANGO_BACKEND_SPECIFICATION copy.md  DJANGO_BACKEND_SPECIFICATION_NEW.md  ENDPOINT_VERIFICATION.md  ESTIMATE_API_CHANGES.md  ESTIMATE_FORM_VISUAL_GUIDE.md  ESTIMATE_IMPLEMENTATION_SUMMARY.md  ESTIMATE_ITEM_DROPDOWN.md  ESTIMATE_VOUCHER_ENHANCEMENTS.md  FRONTEND_API_FIX_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX_TALLY_MOCK.md  MIGRATION_SUMMARY.md  NAVIGATION_REORGANIZATION.md  NAVIGATION_UPDATE.md  PR_DESCRIPTION.md  QUERY_ARCHIVE_IMPLEMENTATION.md  QUERY_EXPIRY_FIX_SUMMARY.md  QUICK_START_TALLY_MOCK.md  README_TALLY_MOCK.md  RECEIPT_VOUCHER_FIX.md  SEARCH_FIX_QUERIES.md  TALLY_MOCK_INTEGRATION.md  TASK_MANAGEMENT_BACKEND_IMPLEMENTATION.md  TASK_MANAGEMENT_IMPLEMENTATION.md
NSJ-ERP-main/nsj-backend/issues/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
NSJ-ERP-main/nsj-backend/nsj_backend/: asgi.py  authentication.py  middleware.py  settings.py  settings_railway.py  urls.py  wsgi.py
NSJ-ERP-main/nsj-backend/products/: admin.py  models.py
(+870 files in other folders)
